# gpx2fit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gpx2fit/: __main__.py  cli.py  converter.py
